GLPI/glpi-deployment.yaml
# glpi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glpi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glpi
  template:
    metadata:
      labels:
        app: glpi
    spec:
      containers:
      - name: glpi
        image: glpi/glpi:10.0.7
        ports:
        - containerPort: 80
        volumeMounts:
        - name: glpi-storage
          mountPath: /var/www/html
      volumes:
      - name: glpi-storage
        persistentVolumeClaim:
          claimName: glpi-pvc
