GLPI/glpi-service.yaml
# glpi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glpi
spec:
  selector:
    app: glpi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
