GLPI/glpi-ingress.yaml
# glpi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glpi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: glpi.example.com  # Remplacez par votre domaine
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: glpi
            port:
              number: 80
